[project]
name = "mcp-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.1",
    "langchain-mcp-adapters>=0.1.13",
    "langgraph>=1.0.3",
    "mcp>=1.21.1",
]
